--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -154,7 +154,7 @@ Department of Physics and Astronomy, Michigan State University, USA\inst{2}}
 \noindent
 \end{block}
 \begin{block}{Takeaway message }
-Excellent research mutually depends on excellent education.
+Excellent research depends on excellent education --- and vice versa!
 % A successful research program cannot be disconnected from education and vice versa
 \end{block}
 \end{frame}
@@ -282,7 +282,9 @@ This is what we do in the \href{{http://www.mn.uio.no/fysikk/english/research/gr
 \begin{columns}
 \column{0.4\textwidth}
 \begin{block}{}
-Physics students can \textbf{pose and solve problems} that combine \textbf{physical insights} with \textbf{mathematical tools} and now also \textbf{computational skills}. This provides a unique combination of applied and theoretical knowledge and skills. These features are invaluable for the development of multi-disciplinary educational and research programs.
+Physics students can \textbf{pose and solve problems} that combine \textbf{physical insights} with \textbf{mathematical tools} and now also \textbf{computational skills}.
+Essential for multi-disciplinary programs.
+% This provides a unique combination of applied and theoretical knowledge and skills. These features are invaluable for the development of multi-disciplinary educational and research programs.
 \end{block}
 
 \column{0.6\textwidth}
@@ -311,7 +313,8 @@ Physics students can \textbf{pose and solve problems} that combine \textbf{physi
 
  \item Students with different backgrounds and needs can thrive socially and scientifically
 
- \item Not a competitive environment, but a drive and enthusiam for sharing and developing knowledge. This is an important element for the  success of for example multi-disciplinary projects 
+ \item Non-competitive and generous environment
+% Not a competitive environment, but a drive and enthusiam for sharing and developing knowledge. This is an important element for the  success of for example multi-disciplinary projects
 \end{itemize}
 
 \noindent
@@ -441,13 +444,47 @@ When UiO's previous supercomputing cluster (titan.uio.no) was replaced by \textb
 \end{frame}
 
 \begin{frame}[plain,fragile]
+\frametitle{The computational revolution in science in society}
+
+\begin{block}{}
+\begin{itemize}
+\item Computing will affect all aspects of society - and should also play a key role in research and education in our society
+
+\item Possible large shifts with the advent of automation
+\end{itemize}
+
+\noindent
+\end{block}
+
+\begin{block}{}
+\begin{itemize}
+\item Present and future problems involve complex systems
+
+\item Require a multi-disciplinary approach
+
+\item Collaboration and team work using computational tools
+\end{itemize}
+
+\noindent
+\end{block}
+
+\begin{block}{}
+\begin{itemize}
+\item To stay competitive as a society we need computing competence integrated in all fields – for both research and education!
+
+\item We need candidates with the right multi-disciplinary background and skills in computational thinking
+\end{itemize}
+
+\noindent
+\end{block}
+\end{frame}
+
+\begin{frame}[plain,fragile]
 \frametitle{Multiscale modeling is the big open research question in the 21st century}
 
 \begin{block}{}
 \begin{itemize}
-\item Present and future problems, unlike traditional
-  science and engineering, involve complex systems with many distinct
-  physical processes
+\item Present and future problems, unlike traditional science and engineering, involve complex systems with many distinct physical processes
 
 \item The wide open research topic of this century, both in industry and at universities, is how to effectively couple processes across different length and energy scales
 
@@ -464,50 +501,30 @@ multi-disciplinary background and computational thinking!
 \end{frame}
 
 \begin{frame}[plain,fragile]
-\frametitle{The future: A new type of students}
-
-\begin{block}{}
-\textbf{Computations will play a central role in almost all aspects of scientific investigations and technological innovation}
-\end{block}
-
-\begin{block}{}
-\textbf{Candidates who are capable of modeling and understanding complicated systems, are in short supply in society}.
-\end{block}
-\begin{block}{}
-We need students that
-\begin{itemize}
-\item can handle large and demanding multi-disciplinary  projects. This requires structured thinking and good analytical skills and a thorough understanding of the problems to be solved
-\end{itemize}
-
-\noindent
-This knowledge makes the students unique on the labor market, a labor market which in the years to come will experience heavy automatization and massive loss of jobs.
-\end{block}
-\begin{block}{}
-This will lay the foundation for cross-disciplinary
-educational, research and innovation activities.
-% It will contribute to building a common cross-disciplinary
-% approach to key strategic initiatives, with important examples from fields like
-% \emph{Energy research, Materials science and  Life Science}.
-\end{block}
-\end{frame}
-
-\begin{frame}[plain,fragile]
-\frametitle{Create the Department for Computational Science!}
+\frametitle{UiO has a unique opportunity to become a Leading European University}
 
 \begin{block}{}
 UiO's strength in computational science (education and research)
 has the potential to make UiO a top European university
+
+\begin{itemize}
+\item We must educate the competence needed
+
+\item We are in a unique position to do so --- across all fields!
+\end{itemize}
+
+\noindent
 \end{block}
 
-\begin{block}{How to achieve it }
+\begin{block}{How to achieve this }
 \begin{itemize}
 \item Establish  a new center/department with focus on computational science and its applications to a wide range of fields (natural science, medicine, social sciences, humanities, applied research etc)
 
 \item Hire ten young professors (age $< 40$) dedicated to innovative \emph{computational} research and education
 
-\item Establish another ten professorships with  shared positions between the  new department and the discipline-specificdepartment (physics, chemistry, ...)
+\item Establish another ten professorships with  shared positions between the  new department and the discipline-specific department
 
-\item Establish  best practices for computational and educational innovations, with a particular focus on  new learning material 
+\item Establish  best practices for computational and educational innovations, with a particular focus on  new learning material and real incentives
 \end{itemize}
 
 \noindent
@@ -521,13 +538,13 @@ has the potential to make UiO a top European university
 
 \begin{block}{}
 \begin{itemize}
-\item Computing plays and will play an even more important role in future scientific and technological advances
+\item Computing plays and will play an even more important role in society --– and this must be reflected in research and education
 
-\item A successful research program cannot be disconnected from education and vice versa
+\item Our program builds in this and allows students to realize their potential and unleash their creativity
 
-\item An educational and research program which focuses on these issues needs to be established as soon as possible
+\item Social and scientific activities in harmony
 
-\item Key goal: students must realize their own potentials and creative power
+\item UiO is in a unique position to develop a leading research and educational activity --- if we act now
 \end{itemize}
 
 \noindent
