--- a/doc/src/future-beamer.tex
+++ b/doc/src/future-beamer.tex
@@ -297,6 +297,18 @@ Essential for multi-disciplinary programs.
 \end{frame}
 
 \begin{frame}[plain,fragile]
+\frametitle{Student dreams}
+
+\begin{doconce:movie}
+\refstepcounter{doconce:movie:counter}
+\begin{center}
+% link to external viewer
+\href{run:mov-future/movtrimmed2.m4v}{\nolinkurl{mov-future/movtrimmed2.m4v}}
+\end{center}
+\end{doconce:movie}
+\end{frame}
+
+\begin{frame}[plain,fragile]
 \frametitle{A social and scientific learning environment}
 
 \begin{block}{}
